--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
     <!-- <script src="lessonsSasha/lesson20_calc.js"></script>
     <script src="spec/20spec.js"></script> -->
 
-    <script src="HomeAsmnts/HA_20.js"></script>
-    <script src="spec/20spec_ha.js"></script>
+    <!-- <script src="HomeAsmnts/HA_20.js"></script>
+    <script src="spec/20spec_ha.js"></script> -->
 
+    <script src="HomeAsmnts/HA_20_additional.js"></script>
+    <script src="spec/20spec_additional.js"></script>
 
     <script class="mocha-exec">
         mocha.run();
