--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
     <!-- <script src="HomeAsmnts/HA_20.js"></script>
     <script src="spec/20spec_ha.js"></script> -->
 
-    <script src="HomeAsmnts/HA_20_additional.js"></script>
-    <script src="spec/20spec_additional.js"></script>
+    <!-- <script src="HomeAsmnts/HA_20_additional.js"></script>
+    <script src="spec/20spec_additional.js"></script> -->
+
+    <script src="HomeAsmnts/HA_23.js"></script>
 
     <script class="mocha-exec">
         mocha.run();
