--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         const expect = chai.expect;
     </script>
 
+    <script src="HomeAsmnts/HA_19.js"></script>
+
     <!-- <script src="lessonsSasha/lesson20_calc.js"></script>
     <script src="spec/20spec.js"></script> -->
 
@@ -29,7 +31,7 @@
     <!-- <script src="HomeAsmnts/HA_20_additional.js"></script>
     <script src="spec/20spec_additional.js"></script> -->
 
-    <script src="HomeAsmnts/HA_23.js"></script>
+    <!-- <script src="HomeAsmnts/HA_23.js"></script> -->
 
     <script class="mocha-exec">
         mocha.run();
