--- a/indexHA27.html
+++ b/indexHA27.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>Genealogy</title>
-    <link rel="stylesheet" href="styles/HA_27.css">
+    <!-- <link rel="stylesheet" href="styles/HA_27.css"> -->
 </head>
 
 <body style="background-color:rgba(236, 236, 238, 0.966); font-family: 'Open Sans', sans-serif;">
@@ -11,9 +11,9 @@
     Основные источники информации в генеалогии
     </h2>
 
-<p class="blockhead"> 1. Ведомости переписи населения и ревизские сказки.</p>
+<p id="blockhead1"> 1. Ведомости переписи населения и ревизские сказки.</p>
 
-<p class="blockbody"> В Российской империи было проведено 10 ревизий (подушных переписей). В начале XVIII века введено подушное обложение,
+<p id="blockbody"> В Российской империи было проведено 10 ревизий (подушных переписей). В начале XVIII века введено подушное обложение,
 единицей которого стала «мужская душа». Целью ревизий было определить размер налога, поэтому они не включали
 группы людей, освобожденных от учёта. Документ, который подавался в качестве отчета называется "ревизская сказка".
 Ревизские сказки представляли собой поимённые списки населения, в которых указывались имя,
@@ -35,7 +35,7 @@
 </ol>
 </div>
 
-<p class="example"> Пример ревизской сказки: </p>
+<p id="exampleRev"> Пример ревизской сказки: </p>
 
 <p>  <a> <img src="1.images/revision.jpg" style="width: 600px;" /> </a></p>
 
@@ -43,9 +43,9 @@
 подробную информацию о  семьях. Например, об образовании, профессиональной деятельности, родном языке. Изначально долгосрочное хранение переписных листов не предполагалось и большая их часть была уничтожена. 
 Проверить сохранность переписных листов по интересующему вас региону можно  <a href="https://metrics.tilda.ws/perepis1897/"> по ссылке. </a></p>  
 
-<p class="blockhead"> 2. Метрические книги.</p>
+<p id="blockhead2"> 2. Метрические книги.</p>
 
-<p class="blockbody">Метрическая книга - книга для официальной записи актов гражданского состояния (рождений, браков и смертей) в России в период с начала XVIII века. 
+<p id="blockbody3">Метрическая книга - книга для официальной записи актов гражданского состояния (рождений, браков и смертей) в России в период с начала XVIII века. 
 Метрические книги велись как правило представителями религиозных организаций (православных, католических, лютеранских церквей, раввинатами) или 
 полицейскими чиновниками (баптистские, старообрядческие, сектантские).</p>
 
@@ -53,14 +53,14 @@
 
 <p> <a> <img src="1.images/metrics.png" style="width: 600px;" /></a></p>
 
-<p class="blockhead"> 3. Исповедные росписи. </p>
+<p id="blockhead3"> 3. Исповедные росписи. </p>
 
-<p class="blockbody">Этот источник информации актуален для вас если ваши прародители были православными. Это ежегодный отчётный документ, составляемый по каждому приходу православной церкви в 
+<p id="blockbody4">Этот источник информации актуален для вас если ваши прародители были православными. Это ежегодный отчётный документ, составляемый по каждому приходу православной церкви в 
 Российской Империи в XVIII — начале XX вв. и представляющий собой посемейный список всех проживающих на его территории прихожан (как правило, за исключением младенцев возрастом менее 1 года), 
 с указанием для каждого человека, был ли он в этом году во время Великого поста, или во время других трёх постов, на исповеди и причащался ли у своего священника, а если нет — то по какой причине 
 (например, за малолетством).</p>
 
-<p class="blockbody"> Есть также много косвенных источников генеалогической информации, 
+<p id="blockbody5"> Есть также много косвенных источников генеалогической информации, 
     которыми не стоит пренебрегать: </p>
 <div class="list">
     <p>
@@ -74,10 +74,7 @@
     </p>
 </div>
 
-<script>
-    'use strict'
-
-    </script>
+<script src="HomeAsmnts/HA_28.js"></script>
 </body>
 
 </html>
