--- a/indexHA27.html
+++ b/indexHA27.html
@@ -62,7 +62,7 @@
 
 <p id="blockbody5"> Есть также много косвенных источников генеалогической информации, 
     которыми не стоит пренебрегать: </p>
-<div class="list">
+<div id="list">
     <p>
     <ul>
     <li>фонды судов, </li>
