home assignment done

--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
                 const expect = chai.expect;
             </script>
         
-            <script src="HomeAsmnts/HA_24add.js"></script>
-            <script src="spec/24spec_ha.js"></script>
-        
+            <!-- <script src="HomeAsmnts/HA_24add.js"></script>
+            <script src="spec/24spec_ha.js"></script> -->
+            <script src="HomeAsmnts/HA_29.js"></script>
+            <!-- <script src="1.lessonsSasha/lesson29.js"></script> -->
+
             <script class="mocha-exec">
                 mocha.run();
             </script>
