--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         
             <!-- <script src="HomeAsmnts/HA_24add.js"></script>
             <script src="spec/24spec_ha.js"></script> -->
-            <script src="HomeAsmnts/HA_31.js"></script>
-            <!-- <script src="1.lessonsSasha/lesson31.js"></script> -->
+            <script src="HomeAsmnts/HA_32a.js"></script>
+            <!-- <script src="1.lessonsSasha/lesson32a.js"></script> -->
 
             <script class="mocha-exec">
                 mocha.run();
