--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
       <hr />
       <button class='clear-tasks button'>Clear Tasks</button>
     </div>
-  <script src="./js/HA_40.js"></script>
+  <script src="./js/HA_41.js" type="module"></script>
 </body>
 
 </html>
