--- a/simple.html
+++ b/simple.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   
-  <script src="HomeAsmnts/HA_43a.js" ></script>
+  <script src="HomeAsmnts/HA_43c.js" ></script>
 </body>
 </html>
 
